<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ic_launcher_name">SeTalk</string>
    <string name="app_name">SeTalk</string>
    <string name="im_label">SeTalk</string>
    <string name="ro_perm_label">Đọc tin nhắn nhanh</string>
    <string name="ro_perm_desc">Cho phép ứng dụng đọc dữ liệu từ nhà cung cấp nội dung IM.</string>
    <string name="wo_perm_label">Viết tin nhắn nhanh</string>
    <string name="wo_perm_desc">Cho phép ứng dụng ghi dữ liệu từ nhà cung cấp nội dung IM.</string>
    <string name="perm_label">Bắt đầu dịch vụ IM</string>
    <string name="perm_desc">Cho phép ứng dụng bắt đầu dịch vụ IM.</string>
    <string name="confirm">Xác nhận</string>
    <string name="ok">Chấp nhận</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="yes">Đồng ý</string>
    <string name="no">Hủy bỏ</string>
    <string name="connect">Kết nối</string>
    <string name="title_activity_lock_screen">SeTalk đã khóa</string>
    <string name="lock_screen_create_passphrase">Đặt mật khẩu</string>
    <string name="lock_screen_confirm_passphrase">Xác nhận mật khẩu</string>
    <string name="lock_screen_passphrase_hint">Mật khẩu</string>
    <string name="lock_screen_passphrase_not_set_enter">Vui lòng đặt mật khẩu để khóa ứng dụng</string>
    <string name="lock_screen_passphrase_not_set_confirm">Xác nhận mật khẩu mới</string>
    <string name="lock_screen_passphrases_not_matching">Mật khẩu không khớp, vui lòng thử lại</string>
    <string name="lock_screen_skip">Bỏ qua &gt;&gt;</string>
    <string name="add_account">Thêm <xliff:g id="account">%1$s</xliff:g> Tài khoản</string>
    <string name="menu_about">About</string>
    <string name="signed_out_prompt_with_error">Bạn đã đăng xuất khỏi <xliff:g id="account">%1$s</xliff:g> because <xliff:g id="reason">%2$s</xliff:g></string>
    <string name="pass_err_length">Mật khẩu không đủ dài</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="account_setup_example_email_address">user@domain</string>
    <string name="account_setup_new_username">Người dùng mới</string>
    <string name="account_setup_password">Mật khẩu</string>
    <string name="account_setup_password_confirm">Xác nhận mật khẩu</string>
    <string name="btn_create_new_account">Đăng ký tài khoản</string>
    <string name="account_setup_pers_now_title">Đăng nhập ngay</string>
    <string name="_via_orbot">"Orbot (Tor)"</string>
    <string name="select_domain_new_account">Địa chỉ dịch vụ chat</string>
    <string name="registering_new_account_">Đăng ký mới tài khoản…</string>
    <string name="signing_in_wait">Đang đăng nhập\u2026</string>
    <string name="signing_out_wait">Đang đăng xuất\u2026</string>
    <string name="do_srv_lookup">Do SRV Lookup</string>
    <string name="use_dns_srv_to_find_actual_xmpp_server_from_domain_name">Use DNS SRV to find actual XMPP server from domain name</string>
    <string name="allow_the_username_and_password_to_be_sent_as_plain_text_when_using_an_unencrypted_transport">Allow the username and password to be sent as plain text when using an unencrypted transport</string>
    <string name="allow_plain_text_auth">Allow Plain Text Auth</string>
    <string name="require_tls_ssl_connection">Require TLS Connection</string>
    <string name="transport_encryption">Transport Encryption</string>
    <string name="how_encrypted_chats_are_started">how encrypted chats are started</string>
    <string name="the_server_to_connect_to_if_needed">The server to connect to, if needed</string>
    <string name="connect_server">Connect Server</string>
    <string name="tcp_port_for_xmpp_server">TCP Port for XMPP Server</string>
    <string name="server_port">Server Port</string>
    <string name="xmpp_resource">XMPP Resource</string>
    <string name="to_distinguish_this_connection_from_other_clients_that_are_also_logged_in">to distinguish this connection from other clients that are also logged in</string>
    <string name="xmpp_resource_prio_title">XMPP Resource Priority</string>
    <string name="xmpp_resource_prio_summary">Messages to clients with multiple active resources will be sent to the resource with the highest priority</string>
    <string name="title_chats">Conversations</string>
    <string name="empty_account_message">You have no\naccounts configured.\n\nTap here to add one!</string>
    <string name="menu_remove_contact">Delete Contact</string>
    <string name="menu_contact_nickname">Contact nickname</string>
    <string name="menu_view_blocked">Blocked</string>
    <string name="nickname">Nickname</string>
    <string name="confirm_delete_contact">The contact \"<xliff:g id="user">%1$s</xliff:g>\" will be deleted.</string>
    <string name="confirm_block_contact">The contact \"<xliff:g id="user">%1$s</xliff:g>\" will be blocked.</string>
    <string name="add_contact_success">Contact \"<xliff:g id="user">%1$s</xliff:g>\" added.</string>
    <string name="delete_contact_success">Contact \"<xliff:g id="user">%1$s</xliff:g>\" deleted.</string>
    <string name="block_contact_success">Contact \"<xliff:g id="user">%1$s</xliff:g>\" blocked.</string>
    <string name="unblock_contact_success">Contact \"<xliff:g id="user">%1$s</xliff:g>\" unblocked.</string>
    <string name="menu_verify">Verify Contact</string>
    <string name="empty_conversation_group">No conversations open\n\nTap to start chatting!</string>
    <string name="search_label">Contact</string>
    <string name="search_hint">type the name of a contact to chat with</string>
    <string name="input_contact_label">Enter your friend\'s full username (ie. zomisfun.4x3f5g@zom.im) here:</string>
    <string name="contact_online"><xliff:g id="user">%1$s</xliff:g> is online</string>
    <string name="contact_away"><xliff:g id="user">%1$s</xliff:g> is away</string>
    <string name="contact_busy"><xliff:g id="user">%1$s</xliff:g> is busy</string>
    <string name="contact_offline"><xliff:g id="user">%1$s</xliff:g> is offline</string>
    <string name="contact_joined"><xliff:g id="user">%1$s</xliff:g> has joined</string>
    <string name="contact_left"><xliff:g id="user">%1$s</xliff:g> has left</string>
    <string name="file_transfer">File Transfer</string>
    <string name="accept_transfer_">Accept transfer?</string>
    <string name="wants_to_send_you_the_file">wants to send you the file</string>
    <string name="no_connection_for_sending">No connection available for sending your share!</string>
    <string name="compose_hint">Send a message</string>
    <string name="compose_hint_secure">Send private message</string>
    <string name="menu_end_conversation">End chat</string>
    <string name="select_link_title">Select link</string>
    <string name="delete">Delete</string>
    <string name="export_media">Export Media File?</string>
    <string name="invitation_prompt"><xliff:g id="user">%1$s</xliff:g> has invited you to join a group chat.</string>
    <string name="accept_invitation">Accept</string>
    <string name="decline_invitation">Decline</string>
    <string name="connecting_to_group_chat_">Connecting to group chat…</string>
    <string name="empty_contact_list">No contacts found.\n\nTap to invite.</string>
    <string name="subscription_prompt">Add <xliff:g id="USER">%1$s</xliff:g>?</string>
    <string name="approve_subscription">Yes</string>
    <string name="decline_subscription">No</string>
    <string name="approve_subscription_error">Unable to approve subscription from <xliff:g id="user">%1$s</xliff:g>. Please try again later.</string>
    <string name="decline_subscription_error">Unable to decline subscription from <xliff:g id="user">%1$s</xliff:g>. Please try again later.</string>
    <string name="otr_session_status_finished">Your contact has stopped the encrypted chat.</string>
    <string name="otr_mode_force">Force / Require</string>
    <string name="otr_mode_auto">Automatically Attempt</string>
    <string name="otr_mode_requested">As Requested</string>
    <string name="otr_mode_disabled">Disabled / Never</string>
    <string name="detected_Otr_keystore_import">We have detected an OTR keystore to import. Would you like to scan the QR password now?</string>
    <string name="smp_question_title">Authentication</string>
    <string name="smp_question_summary">Enter a question to send to your contact, and the answer you expect them to give, in order to verify they are who they claim to be.</string>
    <string name="smp_question_hint">the question to ask</string>
    <string name="qmp_answer_hint">the expected answer</string>
    <string name="remote_verified_us">Your contact has successfully authenticated you.  Now authenticate your contact by asking your own question.</string>
    <string name="otr_qa_title">OTR Q&amp;A Verification</string>
    <string name="chat_encryption_title">Chat Encryption</string>
    <string name="otr_qa_send">Send</string>
    <string name="otr_qa_cancel">Cancel</string>
    <string name="pref_group_security_title">Security and Privacy</string>
    <string name="encryption_and_anonymity_title">Encryption and Anonymity</string>
    <string name="pref_linkify_on_tor_title">Clickable links on Tor</string>
    <string name="pref_linkify_on_tor_summary">For accounts using Tor, make the links in chats clickable (WARNING, possible privacy leak!)</string>
    <string name="menu_locale">Language</string>
    <string name="KEY_PREF_LANGUAGE_TITLE">Languages</string>
    <string name="use_system_default">Use system default</string>
    <string name="button_yes_accept_all">Yes, Accept All</string>
    <string name="pref_delete_unsecured_media_title">Delete Insecure Media</string>
    <string name="pref_delete_unsecured_media_summary">After sharing a photo or file, automatically delete it from the original, insecure storage after import</string>
    <string name="pref_group_tuning_title">Other Tuning</string>
    <string name="start_on_boot">Start Zom Automatically</string>
    <string name="start_on_boot_summary">Always start and automatically sign into previously logged in accounts</string>
    <string name="hide_offline_contacts">Hide offline contacts</string>
    <string name="foreground_service_title">Use foreground priority</string>
    <string name="foreground_service_summary">Reduce the chance that Android will restart our connection service.  This will place a notification in the notification area.</string>
    <string name="heartbeat_interval_title">Heartbeat interval</string>
    <string name="heartbeat_interval_summary">Use a higher value (in minutes) to save battery.  A high value may cause the provider to close your connection due to inactivity.</string>
    <string name="notification_group_title">Notification settings</string>
    <string name="notification_enabled_title">IM notifications</string>
    <string name="notification_enabled_summary">Notify in status bar when IM arrives</string>
    <string name="notification_vibrate_title">Vibrate</string>
    <string name="notification_vibrate_summary">Also vibrate when IM arrives</string>
    <string name="notification_sound_title">Sound</string>
    <string name="notification_sound_summary">Also play ringtone when IM arrives</string>
    <string name="notification_ringtone_title">Select Custom Ringtone</string>
    <string name="pref_debug_title">Enable Debug Logs</string>
    <string name="pref_debug_summary">Output app log data to standard out / logcat for debugging</string>
    <string name="bg_data_prompt_message">Network data connectivity (including background data) is needed for the app to login.</string>
    <string name="prompt_create_new_account_">Create new account?</string>
    <string name="allow_s_to_create_a_new_chat_account_for_s_">Create a new chat account for username \'%1$s\'?</string>
    <string name="disconnected_warning">You are disconnected. Messages will be sent when you reconnect.</string>
    <string name="menu_settings">Settings</string>
</resources>