<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_verified_user_white_48dp"
            android:title="Key Manager" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_people_white_36dp"
            android:title="@string/menu_view_blocked" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_about" />
    </group>

    <item
        android:id="@+id/menu_add_account"
        android:icon="@drawable/ic_menu_add_contact"
        android:title="Add Another Account" />

</menu>
