<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/acct_act_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?listBackground"
    android:fillViewport="true"
    android:filterTouchesWhenObscured="true"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical"
        android:orientation="vertical"
        android:padding="10dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="105dp"
            android:layout_height="97dp"
            android:src="@drawable/avatar_unknown" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="none"
            android:cursorVisible="true"
            android:hint="@string/account_setup_example_email_address"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

        <org.awesomeapp.messenger.ui.widgets.InstantAutoCompleteTextView
            android:id="@+id/spinnerDomains"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:drawSelectorOnTop="true"
            android:hint="@string/select_domain_new_account"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_setup_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:text="******" />

        <EditText
            android:id="@+id/edtPassConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_setup_password_confirm"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>
</ScrollView>
