<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingTop="40dp">

    <org.ironrabbit.type.CustomTypefaceTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="You can use Zom with an existing XMPP/Jabber account on any server you would like."
        android:textColor="@android:color/black"
        android:textSize="18dp" />

    <org.ironrabbit.type.CustomTypefaceEditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:autoLink="none"
        android:background="@drawable/rounded_rect"
        android:cursorVisible="true"
        android:gravity="center"
        android:hint="@string/account_setup_example_email_address"
        android:inputType="textEmailAddress"
        android:padding="6dp"
        android:selectAllOnFocus="true"
        android:textColor="?messageTextPrimary" />

    <org.ironrabbit.type.CustomTypefaceEditText
        android:id="@+id/edtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/rounded_rect"
        android:gravity="center"
        android:hint="@string/account_setup_password"
        android:inputType="textPassword"
        android:padding="6dp"
        android:selectAllOnFocus="true"
        android:textColor="?messageTextPrimary" />

    <org.ironrabbit.type.CustomTypefaceButton
        android:id="@+id/btnSignIn"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="3dip"
        android:background="@drawable/rounded_rect_primary"

        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"

        />

    <ProgressBar
        android:id="@+id/progressExistingUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:visibility="gone"
        />
</LinearLayout>