<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <ScrollView
                android:id="@+id/helpscrollview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_span="3"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:stretchColumns="*">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:padding="6sp">

                        <TextView
                            android:id="@+id/WizardTextBody"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/smp_question_summary"></TextView>
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="6sp">

                        <EditText
                            android:id="@+id/editSmpQuestion"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/smp_question_hint"
                            android:text=""></EditText>

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="6sp">

                        <EditText
                            android:id="@+id/editSmpAnswer"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/qmp_answer_hint"
                            android:text=""></EditText>

                    </TableRow>
                </TableLayout>
            </ScrollView>
        </TableRow>
    </TableLayout>
</LinearLayout>


